kubernetes-manifests/clusterconfig/frontendingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: frontend
  annotations:
    # frontend-ext-ip is the name of the IP address resource created in terraform as
    # google_compute_global_address.frontend-ext-ip
    kubernetes.io/ingress.global-static-ip-name: IN_SCOPE_INGRESS_NAME
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: "gce"
    # networking.gke.io/managed-certificates: frontend
spec:
  rules:
  - http:
      paths:
        - path: "/*"
          pathType: ImplementationSpecific
          backend:
            service:
              name: frontend
              port: 
                number: 80
